<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadeScrollbars="false"
    tools:context=".FirstFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewYue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/month_gz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/spinner_yuegan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:entries="@array/tiangan"
                android:spinnerMode="dialog" />

            <Spinner
                android:id="@+id/spinner_yuezhi"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:entries="@array/dizhi" />
        </LinearLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day_gz" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layout_constraintTop_toTopOf="parent">

            <Spinner
                android:id="@+id/spinner_rigan"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:entries="@array/tiangan" />

            <Spinner
                android:id="@+id/spinner_rizhi"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_weight="1"
                android:entries="@array/dizhi" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/gua_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/gua_xiang" />

            <Spinner
                android:id="@+id/yongshen"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/yongshen"
                android:prompt="@string/yongshen" />

            <Spinner
                android:id="@+id/yao6"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/guas"
                android:prompt="@string/pos6" />

            <Spinner
                android:id="@+id/yao5"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/guas"
                android:prompt="@string/pos5" />

            <Spinner
                android:id="@+id/yao4"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/guas"
                android:prompt="@string/pos4" />

            <Spinner
                android:id="@+id/yao3"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/guas"
                android:prompt="@string/pos3" />

            <Spinner
                android:id="@+id/yao2"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/guas"
                android:prompt="@string/pos2" />

            <Spinner
                android:id="@+id/yao1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:entries="@array/guas"
                android:prompt="@string/pos1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_show"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/show" />

            <Button
                android:id="@+id/button_calc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/calc" />
        </LinearLayout>

        <Button
            android:id="@+id/button_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/next" />

        <TextView
            android:id="@+id/textview_first"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="true"
            android:scrollbars="vertical"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>